--- a/js-alarm-clock.html
+++ b/js-alarm-clock.html
@@ -23,8 +23,24 @@
         <div class="digits" id="csec">00</div>
         <div class="text">SEC</div>
     </div>
-
 </div>
+
+<!--Set the Alarm Time-->
+<div id="tpick">
+    <h1 class="header">SET ALARM</h1>
+    <div id="tpick-h"></div>
+    <div id="tpick-m"></div>
+    <div id="tpick-s"></div>
+    <div>
+        <input type="button" value="Set" id="tset"/>
+        <input type="button" value="Reset" id="treset" disabled/>
+    </div>
+</div>
+
+<!--alarm sound-->
+<audio id="alarm-sound" loop>
+    <source src="wake-up-sound.mp3" type="audio/mp3">
+</audio>
 
 <script src="js-alarm-clock.js"></script>
 </body>
