feat: adding some styling now

--- a/js-alarm-clock.html
+++ b/js-alarm-clock.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript Alarm Clock</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="js-alarm-clock.css">
 </head>
 <body>
 <!--Current Time-->
@@ -39,7 +41,7 @@
 
 <!--alarm sound-->
 <audio id="alarm-sound" loop>
-    <source src="wake-up-sound.mp3" type="audio/mp3">
+    <source src="Twin-bell-alarm-clock.mp3" type="audio/mp3">
 </audio>
 
 <script src="js-alarm-clock.js"></script>
